chore: refactoring and Javadoc